--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -9,14 +9,19 @@ WORKDIR /app
 # Copy package files
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 COPY apps/backend/package.json ./apps/backend/
+COPY packages/core/package.json ./packages/core/
 COPY turbo.json ./
 
 # Install dependencies
 RUN pnpm install --frozen-lockfile
 
 # Copy source code
+COPY packages/core ./packages/core
 COPY apps/backend ./apps/backend
 COPY turbo.json ./
+
+# Build core package first
+RUN pnpm --filter @mboka-id/core build
 
 # Build the application
 RUN pnpm --filter @mboka-id/backend build
@@ -32,11 +37,14 @@ WORKDIR /app
 # Copy package files
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 COPY apps/backend/package.json ./apps/backend/
+COPY packages/core/package.json ./packages/core/
 
 # Install only production dependencies
 RUN pnpm install --frozen-lockfile --prod
 
-# Copy built application from builder
+# Copy built packages from builder
+COPY --from=builder /app/packages/core/dist ./packages/core/dist
+COPY --from=builder /app/packages/core/package.json ./packages/core/
 COPY --from=builder /app/apps/backend/dist ./apps/backend/dist
 
 WORKDIR /app/apps/backend
