--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -10,6 +10,7 @@ WORKDIR /app
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 COPY apps/backend/package.json ./apps/backend/
 COPY packages/core/package.json ./packages/core/
+COPY packages/contracts/package.json ./packages/contracts/
 COPY turbo.json ./
 
 # Install dependencies
@@ -17,10 +18,12 @@ RUN pnpm install --frozen-lockfile
 
 # Copy source code
 COPY packages/core ./packages/core
+COPY packages/contracts ./packages/contracts
 COPY apps/backend ./apps/backend
 COPY turbo.json ./
 
-# Build core package first
+# Build packages first
+RUN pnpm --filter @mboka-id/contracts build
 RUN pnpm --filter @mboka-id/core build
 
 # Build the application
@@ -38,11 +41,14 @@ WORKDIR /app
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 COPY apps/backend/package.json ./apps/backend/
 COPY packages/core/package.json ./packages/core/
+COPY packages/contracts/package.json ./packages/contracts/
 
 # Install only production dependencies
 RUN pnpm install --frozen-lockfile --prod
 
 # Copy built packages from builder
+COPY --from=builder /app/packages/contracts/dist ./packages/contracts/dist
+COPY --from=builder /app/packages/contracts/package.json ./packages/contracts/
 COPY --from=builder /app/packages/core/dist ./packages/core/dist
 COPY --from=builder /app/packages/core/package.json ./packages/core/
 COPY --from=builder /app/apps/backend/dist ./apps/backend/dist
