--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@mboka-id/core": "workspace:^0.0.1",
+    "@mboka-id/contracts": "workspace:^0.1.0",
     "@nestjs/core": "^11.0.1"
   },
   "devDependencies": {
