--- a/apps/backend/Dockerfile.dev
+++ b/apps/backend/Dockerfile.dev
@@ -9,6 +9,7 @@ WORKDIR /app
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 COPY apps/backend/package.json ./apps/backend/
 COPY packages/core/package.json ./packages/core/
+COPY packages/contracts/package.json ./packages/contracts/
 COPY turbo.json ./
 
 # Install all dependencies (including dev)
@@ -16,6 +17,7 @@ RUN pnpm install
 
 # Copy source code
 COPY packages/core ./packages/core
+COPY packages/contracts ./packages/contracts
 COPY apps/backend ./apps/backend
 
 WORKDIR /app/apps/backend
