--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,7 +12,8 @@
     "start:dev": "PORT=4571 nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "PORT=4571 node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix --config ../../packages/core/.eslintrc.js",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "type-check": "tsc --noEmit",
     "test": "jest --config jest.config.js",
     "test:watch": "jest --watch --config jest.config.js",
     "test:cov": "jest --coverage --config jest.config.js",
