fix(ci): resolve CI/CD workflow failures
- Fix format script in core package (remove non-existent test directory)
- Add type-check scripts to all packages and configure in turbo.json
- Fix TypeScript import error in backend e2e test (supertest)
- Fix ESLint configuration conflicts (use flat config for backend/frontend)
- Add --passWithNoTests flag to test scripts (backend and core)
- Update test scripts for packages without tests to exit successfully
- Disable test caching in turbo.json
- Improve Docker build workflow to handle missing secrets gracefully
- Add prettier to devDependencies where needed

All CI workflows (lint, type-check, test, format-check, build) should now pass.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,7 +14,7 @@
     "start:prod": "PORT=4571 node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "type-check": "tsc --noEmit",
-    "test": "jest --config jest.config.js",
+    "test": "jest --config jest.config.js --passWithNoTests",
     "test:watch": "jest --watch --config jest.config.js",
     "test:cov": "jest --coverage --config jest.config.js",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config jest.config.js",
