feat(config): create @mboka-id/config package with multi-database support
- Create new @mboka-id/config package as separate library
- Move all configurations from @mboka-id/core to @mboka-id/config
- Add support for multiple database connections
- Add getTypeOrmConfigByName() and getAllTypeOrmConfigs() functions
- Improve DatabaseModule with static methods for multiple connections
  - DatabaseModule.forRoot() for default connection
  - DatabaseModule.forRoot({ connectionName }) for specific connection
  - DatabaseModule.forRoot({ connections: [] }) for multiple connections
- Add configuration via environment variables:
  - DATABASES=db1,db2 to define connections
  - DATABASE_DB1_*, DATABASE_DB2_* to configure each connection
- Support database types: postgres, mysql, mariadb, sqlite, mongodb
- Add DatabaseConnectionConfig interface and DatabaseModuleOptions type
- Create EXAMPLES.md file with usage examples
- Update @mboka-id/core to use @mboka-id/config

Breaking changes:
- Configurations must now be imported from @mboka-id/config
- DatabaseModule now requires .forRoot() instead of direct import

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mboka-id/config",
   "version": "0.0.1",
-  "description": "Package de configuration centralisée pour les applications Mboka ID",
+  "description": "Centralized configuration package for Mboka ID applications",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
@@ -27,7 +27,8 @@
   "dependencies": {
     "@nestjs/config": "^4.0.2",
     "@nestjs/typeorm": "^11.0.0",
-    "joi": "^17.13.3"
+    "joi": "^17.13.3",
+    "pg": "^8.16.3"
   },
   "peerDependencies": {
     "@nestjs/common": "^11.0.1",
@@ -37,7 +38,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.7",
+    "@types/pg": "^8.11.10",
     "typescript": "^5.7.3"
   }
 }
-
